dynamix/force-app/main/default/objects/Co_Applicant__c/Co_Applicant__c.object-meta.xml
<CustomObject>
    <label>Co-Applicant</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Applicant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>