dynamix/force-app/main/default/objects/Co_Applicant__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Co-Applicant</relationshipLabel>
    <relationshipName>Co_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>