dynamix/force-app/main/default/objects/Co_Applicant__c/fields/Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code__c</fullName>
    <label>Mailing Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>