dynamix/force-app/main/default/objects/Co_Applicant__c/fields/Other_City__c.field-meta.xml
<CustomField>
    <fullName>Other_City__c</fullName>
    <label>Other City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>