dynamix/force-app/main/default/objects/Co_Applicant__c/fields/Other_Street__c.field-meta.xml
<CustomField>
    <fullName>Other_Street__c</fullName>
    <label>Other Street</label>
    <type>TextArea</type>
</CustomField>