dynamix/force-app/main/default/objects/Co_Applicant__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>